# simple_flask_app

./: Dockerfile  README.md  pyproject.toml  test_app.py
app/: __init__.py
