[tool.poetry]
name = "simple_flask_app"
version = "0.1.0"
description = ""
authors = ["Ben Waithaka <bwaithaka@copiakenya.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.3"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
